// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextLink snapshot tests renders with custom className 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  font-family: ArtifaktElement,sans-serif;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

<a
  className="emotion-0 test-classname"
  href="https://www.autodesk.com/"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  target="_parent"
>
  This is a link
</a>
`;

exports[`TextLink snapshot tests renders with no props 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  font-family: ArtifaktElement,sans-serif;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

<span
  className="emotion-0"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  role="button"
/>
`;

exports[`TextLink snapshot tests renders with props 1`] = `
.emotion-0 {
  font-weight: 400;
  font-size: 14px;
  line-height: 1.428571429;
  font-family: ArtifaktElement,sans-serif;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

<a
  className="emotion-0"
  href="https://www.autodesk.com/"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  target="_parent"
>
  This is a link
</a>
`;
